Fixes visible tags in podcast season list
RichTextField from Ckeditor apparently adds paragraph tags
by default (can configure it not to), but using safe rendering
removes html elements fixing the issue

--- a/nablapps/podcast/templates/podcast/season.html
+++ b/nablapps/podcast/templates/podcast/season.html
@@ -30,7 +30,7 @@
                         {% endif %}
 
                             <h2>{{ podcast.title }}</h2>
-                            <p>{{ podcast.get_short_description }}</p>
+                            <p>{{ podcast.get_short_description|safe }}</p>
                             <span class="date-text">
                                 {% if podcast.has_video %}
                                 <span class="fas fa-film"></span>
