Add banner informing about downtime

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -441,7 +441,7 @@ Overflow-x: hidden;
     text-decoration: none !important
 }
 
-/* Temporary for corona banner */
-.corona {
+/* Temporary for server maintenance banner */
+.server-maintenance {
     font-size: 20px; 
 }
