Fix mail typo in recruitment comment

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
 
          Hvis du er her, så er du kanskje interessert i å bli med i WebKom?
          Vi gjør masse kule ting - visste du at WebKom drifter flere servere på NTNU, at vi har ukentlige møter med sosial koding, og at dette er en super arena for å lære masse om data?
-         Søk neste opptak, send oss en mail på webkom@ntnu.no eller send en melding til noen i WebKom hvis du er interessert!
+         Søk neste opptak, send oss en mail på webkom@nabla.no eller send en melding til noen i WebKom hvis du er interessert!
     -->
 
     <head>
