--- a/templates/base.html
+++ b/templates/base.html
@@ -306,6 +306,8 @@
                             <a class="dropdown-item" href="{% url "view_user_events" %}">Påmeldte arrangementer</a>
                             <a class="dropdown-item" href="{% url "auth_logout" %}">Logg ut</a>
                             <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url "forum-main" channel_id=1 thread_id=0 %}" style="color: black">Nablaforum</a>
+
                             <a class="dropdown-item" href="{% url "user_polls" %}">Brukeravstemninger</a>
                             <a class="dropdown-item" href="{% url "officebeer_account" %}">Office Beer</a>
                             <a class="dropdown-item" href="{% url "users_birthday" %}">Bursdag</a>
