pop-up for "fadderperioden"

--- a/templates/base.html
+++ b/templates/base.html
@@ -176,10 +176,10 @@
                             Vi har et heidundranes fadderopplegg som vi håper du vil ta del i!
                             Det er derfor veldig viktig at du trykker på knappen under og registrerer deg!
                         </p>
-                        <a href="https://forms.gle/yniT7FZm9XavP8kK8"
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7rw05t8pVeb8MvBAW5QXTrHj2Zdr9PfSZoDGYNr380-V9oQ/viewform?usp=sf_link"
                            class="btn btn-primary btn-lg btn-block my-1"
                            style="white-space:normal">
-                            Trykk her for påmelding til fadderperioden - <b>2020!</b>
+                            Trykk her for påmelding til fadderperioden - <b>2021!</b>
                         </a>
                         <p>
                             Registreringen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
@@ -189,8 +189,8 @@
                             <a href="nystudent" class="list-group-item list-group-item-action" style="color:black">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
                             </a>
-                            <a href="https://www.facebook.com/groups/2593569320864380" class="list-group-item list-group-item-action"style="color:black">
-                                Meld deg også inn i facebook-gruppen for fadderperioden 2020 ved å trykke her.
+                            <a href="https://www.facebook.com/groups/938284966740165/about" class="list-group-item list-group-item-action"style="color:black">
+                                Meld deg også inn i facebook-gruppen for fadderperioden 2021 ved å trykke her.
                             </a>
                             <a href="english" class="list-group-item list-group-item-action"style="color:black">
                                 <b>New international student?</b> Read more about Nabla on our english pages by clicking here.
@@ -198,7 +198,7 @@
                         </div>
                         <br>
 
-                        <img src="https://nabla.no//media/uploads/content/fadderuka_2020.png" style="width: 100%;">
+                        <!-- <img src="https://nabla.no//media/uploads/content/fadderuka_2020.png" style="width: 100%;"> -->
 
                         <small>
                             Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
