--- a/templates/base.html
+++ b/templates/base.html
@@ -477,6 +477,7 @@
                     <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-2x social-icon"></a>
                     <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-2x social-icon"></a>
                     <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-2x social-icon"></a>
+                    <a href="https://nabla.no/media/uploads/content/snapcode.png" class="fab fa-snapchat fa-2x social-icon"></a>
                 </div>
             </div>
             </div>
