adding snap to frontpage and fixing application

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -92,6 +92,7 @@ inn{% block main-blank %}
         <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-2x social-icon"></a>
         <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-2x social-icon"></a>
         <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-2x social-icon"></a>
+        <a href="https://nabla.no/media/uploads/content/snapcode.png" class="fab fa-snapchat fa-2x social-icon"></a>
         </div>
         <a href="/contact/gullkorn/" class="btn btn-primary" >Lyst til å melde inn et gullkorn eller sitat?</a>
     </div>
