--- a/nablapps/apply_committee/templates/apply_committee/apply.html
+++ b/nablapps/apply_committee/templates/apply_committee/apply.html
@@ -53,11 +53,11 @@
  .form-row .formgroup {
      display: inline-block;
 </style>
-<h1>Kræsjkurs i Bøflu, Elmag, Optikk og Matte 3</h1>
+<h1>Søk til nablas undergrupper</h1>
 {% if application_round %}
 Nåværende søknad: <u>{{ application_round.name }}</u> <br />
-Hvilke konkrete temaer/delkapitler i faget ønsker du å få grundig gjennomgang i?<br />
-Skriv inn en konkret eksamensoppgave du ønsker skal bli gjennomgått.<br />
+Skriv kun i fritekst-feltet dersom komiteen har sagt at du skal gjøre dette.<br />
+Du kan se en oversikt over hvem som har søkt hva <a href="{% url 'list-applicants' %}">her</a>.
 <hr />
 <form id="application_form" method="post">
     {% csrf_token %}
@@ -78,7 +78,7 @@ Skriv inn en konkret eksamensoppgave du ønsker skal bli gjennomgått.<br />
         </div>
     </div>
     {% endfor %}
-    <button type="button" onclick="newForm($('.form-row:last'), 'form')">Legg til fag</button>
+    <button type="button" onclick="newForm($('.form-row:last'), 'form')">Legg til prioritering</button>
     {{ formset.management_form }}
     <button type="submit">Send inn søknad</buttom>
 </form>
