adding "Fadderperiode plan" to popup

--- a/templates/base.html
+++ b/templates/base.html
@@ -198,7 +198,7 @@
                         </div>
                         <br>
 
-                        <!-- <img src="https://nabla.no//media/uploads/content/fadderuka_2020.png" style="width: 100%;"> -->
+                        <img src="https://nabla.no/media/uploads/content/fadderuka21_juni.png" style="width: 100%;">
 
                         <small>
                             Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
