add the ability to register user via pop-up

--- a/templates/base.html
+++ b/templates/base.html
@@ -182,9 +182,14 @@
                             Trykk her for påmelding til fadderperioden - <b>2021!</b>
                         </a>
                         <p>
-                            Registreringen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
+                            Påmeldingen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
                             Gjør dette nå, og så kan du lese resten av informasjonen senere.
                         </p>
+                        <!-- <a href="https://nabla.no/brukere/registrer/"
+                        class="btn btn-warning btn-lg btn-block my-1"
+                        style="white-space:normal">
+                         Trykk her for å registrere deg en bruker på <b>Nabla.no</b>
+                     </a> -->
                         <div class="list-group">
                             <a href="nystudent" class="list-group-item list-group-item-action" style="color:black">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
