possible to register user through pop-up

--- a/templates/base.html
+++ b/templates/base.html
@@ -174,7 +174,7 @@
                         <p>
                             Nabla er linjeforeningen for alle studenter ved sivilingeniørprogrammet i fysikk og matematikk.
                             Vi har et heidundranes fadderopplegg som vi håper du vil ta del i!
-                            Det er derfor veldig viktig at du trykker på knappen under og registrerer deg!
+                            Det er derfor veldig viktig at du trykker på knappen under og melder deg på!
                         </p>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7rw05t8pVeb8MvBAW5QXTrHj2Zdr9PfSZoDGYNr380-V9oQ/viewform?usp=sf_link"
                            class="btn btn-primary btn-lg btn-block my-1"
@@ -185,11 +185,11 @@
                             Påmeldingen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
                             Gjør dette nå, og så kan du lese resten av informasjonen senere.
                         </p>
-                        <!-- <a href="https://nabla.no/brukere/registrer/"
-                        class="btn btn-warning btn-lg btn-block my-1"
-                        style="white-space:normal">
-                         Trykk her for å registrere deg en bruker på <b>Nabla.no</b>
-                     </a> -->
+                        <a href="https://nabla.no/brukere/registrer/"
+                           class="btn btn-warning btn-lg btn-block my-1"
+                           style="white-space:normal">
+                            Trykk her for å registrere deg en bruker på <b>Nabla.no</b>
+                        </a>
                         <div class="list-group">
                             <a href="nystudent" class="list-group-item list-group-item-action" style="color:black">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
