updated info on register page

--- a/nablapps/accounts/templates/accounts/user_registration.html
+++ b/nablapps/accounts/templates/accounts/user_registration.html
@@ -8,7 +8,10 @@
 <p>Her kan du registrere deg med ditt NTNU-brukernavn. Det er kun nablakomponenter som kan lage seg bruker. 
 <br>
 <br>
-<b style="color: red;">Hvis du har skiftet linje</b> må du betale <a href="/nystudent/" style="color:red"> medlemskontingent</a> og sende mail til websjef@nabla.no Hvis brukernavnet er godkjent vil du motta en epost med passord.</p>
+<b style="color: red;">Hvis du har skiftet linje</b> må du betale <a href="/nystudent/" style="color:red"> medlemskontingent</a> og sende mail til websjef@nabla.no Hvis brukernavnet er godkjent vil du motta en epost med passord.
+<br>
+<br>
+<b style="color: red;">Du må også betale medlemskontingent hvis du er ny student!</b></p>
 
 <form method="post" action="" >
     {% csrf_token %}
