testing how the contactforum works

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -60,7 +60,7 @@ Styret ønsker gjerne hjelp fra dere alle til å gjøre Nabla til en best mulig 
 <p>
 Du kan også bruke skjemaet til å sende en melding til de tillitsvalgte ved instituttene. ITV-ene tar imot blant annet  forslag til faglige eller studierelaterte endringer. De vil bringe forslagene dine videre til ledelsen. Husk at du også kan kontakte ITV-ene ved utfordringer med emner og undervisere.
 <br>
-Velg mottaker ITV ved IFY for fysikk eller ITV ved IMF for matte
+Velg  ITV ved IFY for fysikk eller ITV ved IMF for matte
 </p>
 
 <p>
