Doing nablawiki more visible for all

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -95,6 +95,8 @@ inn{% block main-blank %}
         <a href="https://nabla.no/media/uploads/content/snapcode.png" class="fab fa-snapchat fa-2x social-icon"></a>
         </div>
         <a href="/contact/gullkorn/" class="btn btn-primary" >Lyst til å melde inn et gullkorn eller sitat?</a>
+        <p></p>
+        <a href="https://nabla.no/wiki/" class="btn btn-primary" >Nablawiki</a>
     </div>
     {% endif  %}
     <div class="office">
