--- a/templates/base.html
+++ b/templates/base.html
@@ -238,7 +238,7 @@
                 {# navigasjonslenker #}
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item mr-1 ">
-                        <a class="nav-link text-light" href="{% url "event_main_page" %}">Arrangementer</a>
+                        <a class="nav-link text-light" href="{% url "event_main_page" %}">Kalender</a>
                     </li>
                     <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="{% url "jobs_list" %}">Karriere</a>
