Changing wiki to nablawiki under nablamedia

--- a/templates/base.html
+++ b/templates/base.html
@@ -254,7 +254,7 @@
                             <a class="dropdown-item" href="/referater/{% now "Y" %}">Styremøtereferater</a>
                             <a class="dropdown-item" href="{% url "albums" %}">Bildealbum</a>
                             <a class="dropdown-item" href="{% url "code_golf_menu" %}">Kodegolf</a>
-                            <a class="dropdown-item" href="{% url "wiki:root" %}">Wiki</a>
+                            <a class="dropdown-item" href="{% url "wiki:root" %}">NablaWiki</a>
                             <a class="dropdown-item" href="{% url "news_list" %}">Nyheter</a>
                             <a class="dropdown-item" href="{% url "blog" %}">Blogg</a>
                             <a class="dropdown-item" href="/julekalender/2020/">Julekalender 2020</a>
