small change in a comment

--- a/templates/base.html
+++ b/templates/base.html
@@ -248,7 +248,7 @@
                             Nablamedia
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                            {# Faste lenker om Nabla #}
+                            {# Faste lenker Nablamedia #}
                             <a class="dropdown-item" href="{% url "nablad_list" %}">Nabladet</a>
                             <a class="dropdown-item" href="{% url "season_view" %}">Skråttcast</a>
                             <a class="dropdown-item" href="/referater/{% now "Y" %}">Styremøtereferater</a>
