add button for BN, as requested by the Leader

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -97,6 +97,8 @@ inn{% block main-blank %}
         <a href="/contact/gullkorn/" class="btn btn-primary" >Lyst til å melde inn et gullkorn eller sitat?</a>
         <p></p>
         <a href="https://nabla.no/wiki/" class="btn btn-primary" >Nablawiki</a>
+        <p></p>
+        <a href="mailto:bedriftskontakt@nabla.no" class="btn btn-primary" >Bedriftsforslag - send en mail til BN</a>
     </div>
     {% endif  %}
     <div class="office">
