results from application are convertable to csv

--- a/nablapps/apply_committee/templates/apply_committee/admin_application_list.html
+++ b/nablapps/apply_committee/templates/apply_committee/admin_application_list.html
@@ -3,6 +3,7 @@
 {% block warning %}
 <b>NB! Du er nå i gruppeledermodus. Det vil si at du kan se anonyme søknader.<br />
     With great power comes great responsiblity!</b>
+<div><a href="nabla.no/application/list/admin/export.csv"><button class="csv">Eksporter til regneark</button></a></div>
 {% endblock warning %}
 
 {% block com_mail_list %}
