--- a/templates/base.html
+++ b/templates/base.html
@@ -276,8 +276,8 @@
                             <a class="dropdown-item" href="/om/kompendier/">Kompendier</a>
                             <a class="dropdown-item" href="/om/Kontortider/">Kontortider</a>
                             <a class="dropdown-item" href="/om/nablas-fond/">Nablas fond</a>
-                            <a class="dropdown-item" href="/om/nablas-fond/">Stillingsbeskrivelser</a>
-                            <a class="dropdown-item" href="/om/tillitsvalgte/">Nablas fond</a>
+                            <a class="dropdown-item" href="/om/stillingsbeskrivelser/">Stillingsbeskrivelser</a>
+                            <a class="dropdown-item" href="/om/tillitsvalgte/">Tillitsvalgte</a>
 
                     <li class="nav-item mr-1 dropdown ">
                         <a href="#Om" class="nav-link dropdown-toggle text-light" data-toggle="dropdown" id="navbarDropdown2" role="button"  aria-haspopup="true" aria-expanded="false">
