--- a/nablapps/contact/templates/contact/success_gullkorn.html
+++ b/nablapps/contact/templates/contact/success_gullkorn.html
@@ -3,5 +3,5 @@
 {% block title %}Takk{% endblock %}
 
 {% block content %}
-    <h1>Takk for innspillet!</h1>
+    <h1>Takk for gullkornet!</h1>
 {% endblock %}
