--- a/templates/includes/event_widget.html
+++ b/templates/includes/event_widget.html
@@ -3,7 +3,7 @@
         <h3 > <a class="text-dark" href="{% url 'event_main_page' %}">Arrangementer</a> </h3>
         {% include "includes/upcoming_events.html" with upcoming=upcoming_events class="c-event" %}
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6"; style = "margin-top: 20px;">
         <h3> <a class="text-dark" href="{% url 'event_main_page' %}">Bedriftspresentasjoner</a> </h3>
         {% include "includes/upcoming_events.html" with upcoming=upcoming_bedpreses class="c-bedpres"%}
     </div>
