--- a/templates/includes/upcoming_events.html
+++ b/templates/includes/upcoming_events.html
@@ -5,7 +5,7 @@
 
 <ul class="list-unstyled nav  " >
 {% for event in upcoming %}
-        <li class=" w-100 d-flex pb-2" >
+        <li class=" w-100 d-flex pb-2"; style = "padding-top: 5px; padding-bottom: 5px;" >
             <a class="text-dark text-decoration-none  mr-2 text-truncate " href="{{ event.get_absolute_url }}" style="overflow: hidden">
                 <time class="badge badge-pill badge-dark {{ class }}"
                       datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"d.m" }}
