--- a/templates/nablashop/product_detail.html
+++ b/templates/nablashop/product_detail.html
@@ -4,10 +4,23 @@
 {% block content %}
     <img class="img img-fluid" style="width: 70%" src="{{ product.photo.url }}"></p>
     <h1>{{ product.name }} - {{ product.price }} kr</h1>
+    <h1>{{ product.stock }} stk på lager</h1>
     <p>{{ product.description|markdown }}</p>
 
-
-
+    <!-- <form class="d-flex justify-content-left">
+        <input type="number" value="1" aria-label="Search" class="form-data">
+        <button> class="btn btn-primary btn-md my-0 p" type="submit">
+            Add to cart
+            <i class="fas fa-shopping-cart ml-1"></i> 
+        </button>
+    </form> -->
+    <a href="{{ object.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p" >
+        Add to cart
+        <i class="fas fa-shopping-cart ml-1"></i>
+    </a> 
+    <a href="{{ object.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p" >
+        Remove from cart
+    </a> 
 
 {% endblock %}
 
