--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 {% load sekizai_tags %}
 {% load bootstrap4 %}
 {% load static %}
+{% load cart_template_tags %}
 <!DOCTYPE html>
 <html lang="no">
    <!--
@@ -120,6 +121,19 @@
         {% endaddtoblock %}
         <!-- css-block -->
         {% render_block "css" %}
+
+        <!-- <body>
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dimissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert"
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                {% endfor %}
+            {% endif %}
+        </body> -->
 
         <!-- Fav and touch icons, for screen and mobile -->
         <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
@@ -308,6 +322,15 @@
 {#                    <input name="q" placeholder="Søk..." type="search" class="form-control mr-sm-2">#}
 {#                </form>#}
                 <ul class="nav navbar-nav ">
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'nablashop:order-summary' %}" class="nav-link waves-effect">
+                            <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
+                            <i class="fas fa-shopping-cart"></i>
+                            <span class="clearfix d-none d-sm-inline-block"> Handlevogn </span>
+                        </a>
+                    </li>
+                    {% endif %}
                     <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="/search/">Søk</a>
                     </li>
