--- a/nablapps/poll/templates/poll/includes/vote_form.html
+++ b/nablapps/poll/templates/poll/includes/vote_form.html
@@ -1,7 +1,8 @@
 <form action="{% url "poll_vote" poll.id %}" method="post">
     {% csrf_token %}
     <input type="hidden" name="next" value="{% firstof next request.path %}#{{ poll.id }}">
-    {% for choice in poll.choices.all %}
+    {{ poll.randomise_poll }}
+    {% for choice in poll.shuffled %}
         <div class="radio">
             <label>
                 <input type="radio" name="choice" value="{{ choice.id }}">
