Added HTML-attribute autofocus

--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -11,7 +11,7 @@
 {% block content %}
 <form method="get" action="" class="form-inline">
   <div class="form-group">
-    <input type="text" name="q" id="id_q" class="form-control" style="" placeholder="Søk..." {% if query %}value="{{ query }}"{% endif %}/>
+    <input type="text" name="q" id="id_q" class="form-control" autofocus style="" placeholder="Søk..." {% if query %}value="{{ query }}"{% endif %}/>
     <button type="submit" class="btn btn-primary" value="Søk">
       <span class="fas fa-search"></span>
       Søk
