adding BN's account number to frontpage

--- a/templates/base.html
+++ b/templates/base.html
@@ -466,6 +466,7 @@
                 <p>
                 Organisasjonsnr.: <span class="float-right">992168544</span><br />
                 Hovedkonto: <span class="float-right">1503.13.57338</span><br />
+                Bedriftskontakten-konto: <span class="float-right">1503.13.57311</span><br />
                 Arrkomkonto: <span class="float-right">1503.13.57400</span><br />
                 ProKom-konto: <span class="float-right">1503.13.57338</span><br />
                 Gravitoneskonto: <span class="float-right">1503.65.97965</span><br />
