--- a/nablapps/interactive/templates/interactive/code_golf.html
+++ b/nablapps/interactive/templates/interactive/code_golf.html
@@ -6,23 +6,27 @@
 
 {% block more_head %}
 
-<script src="{% static "interactive/js/skulpt.min.js" %}" type="text/javascript"></script> 
-<script src="{% static "interactive/js/skulpt-stdlib.js" %}" type="text/javascript"></script> 
+<script src="{% static "interactive/js/skulpt.min.js" %}" type="text/javascript"></script>
+<script src="{% static "interactive/js/skulpt-stdlib.js" %}" type="text/javascript"></script>
 
 {% endblock %}
 
 
 {% block content %}
-<script type="text/javascript"> 
+<script type="text/javascript">
 // output functions are configurable.  This one just appends some text
 // to a pre element.
-function outf(text) { 
-    var mypre = document.getElementById("output"); 
-    mypre.innerHTML = mypre.innerHTML + text; 
-} 
+function outf(text) {
+    var mypre = document.getElementById("output");
+    mypre.innerHTML = mypre.innerHTML + text;
+}
+function setError(text) {
+    var mypre = document.getElementById("error");
+    mypre.innerHTML = text;
+}
 function builtinRead(x) {
     if (Sk.builtinFiles === undefined || Sk.builtinFiles["files"][x] === undefined)
-            throw "File not found: '" + x + "'";
+        throw "File not found: '" + x + "'";
     return Sk.builtinFiles["files"][x];
 }
 // Here's everything you need to run a python program in skulpt
@@ -30,47 +34,50 @@ function builtinRead(x) {
 // get a reference to your pre element for output
 // configure the output function
 // call Sk.importMainWithBody()
-function runit() { 
-   var prog = document.getElementById("yourcode").value; 
-   var mypre = document.getElementById("output"); 
-   mypre.innerHTML = ''; 
-   Sk.pre = "output";
-   Sk.configure({output:outf, read:builtinRead}); 
-   (Sk.TurtleGraphics || (Sk.TurtleGraphics = {})).target = 'mycanvas';
-   var myPromise = Sk.misceval.asyncToPromise(function() {
-       return Sk.importMainWithBody("<stdin>", false, prog, true);
-   });
-   myPromise.then(function(mod) {
-       console.log('success');
-   },
-       function(err) {
-       console.log(err.toString());
-   });
-   document.getElementById("id_submitted_code").value = prog;
-   document.getElementById("id_submitted_output").value = mypre.innerHTML;
-} 
-</script> 
+function runit() {
+    var prog = document.getElementById("yourcode").value;
+    var mypre = document.getElementById("output");
+    mypre.innerHTML = '';
+    Sk.pre = "output";
+    Sk.configure({output: outf, read: builtinRead});
+    (Sk.TurtleGraphics || (Sk.TurtleGraphics = {})).target = 'mycanvas';
+    var myPromise = Sk.misceval.asyncToPromise(function() {
+        return Sk.importMainWithBody("<stdin>", false, prog, true);
+    });
+    myPromise
+        .then(() => {
+            setError("")
+        })
+        .catch((error) => {
+            setError(error)
+        });
+    document.getElementById("id_submitted_code").value = prog;
+    document.getElementById("id_submitted_output").value = mypre.innerHTML;
+}
+</script>
 
-<h3>{{ task }}</h3> 
+<h3>{{ task }}</h3>
 
 <p>{{ task_text|markdown }}</p>
 
-<form> 
+<form>
 <textarea id="yourcode" cols="40" rows="10">
 #Kode her (tips: fjern disse kommentarene for å få færre tegn)
 #Whitepaces blir telt
 
-</textarea><br />
+</textarea>
+<br />
 
 {{ form.shown_code }}
-<button type="button" onclick="runit()">Run</button> 
-</form> 
-<pre id="output" style="max-height:300px" ></pre> 
-<!-- If you want turtle graphics include a canvas -->
+<button type="button" onclick="runit()">Run</button>
+</form>
+
+<pre id="output" style="max-height:300px;margin-top:1em;padding:0.5em;border-style:solid" ></pre>
+<pre id="error" style="max-height:300px;color:red" ></pre>
 
 <form method="POST">
     {% csrf_token %}
-    <p id="submitted_code">{{ code_golf_form.submitted_code }}</p> 
+    <p id="submitted_code">{{ code_golf_form.submitted_code }}</p>
     <p id="submitted_output">{{ code_golf_form.submitted_output }}</p>
     <button type="submit">Send</button>
 </form >
